--- a/style.css
+++ b/style.css
@@ -5,6 +5,10 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+  
+}
+body{
+    background-color:#e9ecf0;
 }
 
 
@@ -15,7 +19,7 @@
     width: 100%;
     height: 96px;
     padding: 10px;
-    display: flex;
+    display:flex;
     align-items: center
 }
 .thelogo{
@@ -54,9 +58,7 @@
     margin-left: 535px;
 
 }
-body{
-    background-color:#e9ecf0;
-}
+
 .nav{
     background:#fff;
     width:100%;
@@ -94,7 +96,6 @@ body{
     align-items: center;
     margin-top:100px;
    
-    margin-bottom: 56px;
    text-align: center;
     
     
@@ -107,7 +108,7 @@ body{
     width: 529px;
     height: 491px;
     margin-left: 211px;
-    border: 10px solid white;
+    border: 10px solid #fff;
     border-width: 33px;
     border-radius: 26px
     
@@ -115,15 +116,17 @@ body{
 }
 .div1{
     display: flex;
+    padding-top: 94px;
+
 }
 .innercontent{
     width:518px;
     height:495px;
     background-color:#e9ecf0;
     margin-left: 63px;
-    padding-left: 125px;
+    padding-left: 63px;
     align-items: center;
-    padding-top:117px ;
+    padding-top:66px ;
     
     
 }
@@ -170,7 +173,7 @@ body{
     width: 529px;
     height: 491px;
     margin-left: 211px;
-    border: 10px solid white;
+    border: 10px solid #fff;
     border-width: 33px;
     border-radius: 26px
 }
@@ -182,15 +185,17 @@ body{
 
 .div2{
     display: flex;
+    padding-top: 94px;
+
 }
 .innercontent2{
     width:518px;
     height:495px;
     background-color:#e9ecf0;
-    margin-left: 63px;
-    padding-left: 125px;
+    margin-left: 103px;
+    padding-left: 63px;
     align-items: center;
-    padding-top:117px ;
+    padding-top:66px ;
     
     
 }
@@ -234,11 +239,12 @@ body{
 }
 
 .followaha{
+    display: flex;
     width: 73%;
     height: 132px;
     background: black;
     border-radius: 17px;
-    margin-top: 320px;
+    margin-top: 132px;
     padding: 20px;
     margin-left: 188px;
     margin-right: 263px;
@@ -279,7 +285,7 @@ body{
     height: 38px;
     border: 1px solid white;
     border-radius: 40px;
-    margin-left: 220px;
+    margin-left: 224px;
     margin-top: 6px;
 }
 
@@ -292,7 +298,7 @@ body{
     padding-left: 20px;
 }
 .footer{
-    height:500px;
+    
     width:100% ;
     background-color: black;
 }
@@ -321,22 +327,28 @@ body{
 }
 .shop{
     padding-right: 11rem;
+    padding-left: 30px;
 }
 .legal{
     padding-right: 7rem;
+    padding-left: 30px;
    
 }
 .hsub{
     padding-top: 10px;
     line-height: 47px;
+    padding-left: 30px;
 }
 .ssub{
     padding-top: 10px;
     line-height: 47px;
+    padding-left: 30px;
+   
 }
 .lsub{
     padding-top: 10px;
     line-height: 47px;
+    padding-left: 30px;
 
 }
 .smedia{
@@ -349,7 +361,7 @@ body{
     position: absolute;
     background-color: black;
     margin-left: 104px;
-    /* border-color: white; */
+ 
     border-radius: 50%;
     border: 1px solid white;
     padding: 7px;
@@ -385,15 +397,31 @@ body{
     background-color: black
     
 }
-.endtext{
-    color: white;
-    background-color: black;
-    margin-left: 0rem;
-    height: 24px;
-    padding-left: 70rem;
-    margin-top: -10px;
-}
+
 .line{
   margin-top: 10px;
   margin-right:5px ;
+  color: #fff;
 }
+.footer h{
+    background-color: black;
+    padding-left: 70rem;
+    color: #fff;
+}
+.line2 {
+
+    margin-right:5px ;
+  
+    background-color: white;
+}
+
+    .endtex{
+        color: white;
+        background-color: black;
+        margin-left: 0rem;
+        height: 115px;
+        padding-left: 61rem;
+        font-size: 15px;
+    
+    }
+
