--- a/style.css
+++ b/style.css
@@ -23,10 +23,8 @@ body{
     align-items: center
 }
 .thelogo{
-    border: 1px solid black;
-    padding: 13px 13px 13px 13px;
-    border-width: 2px;
-    border-radius: 4px;
+    
+  
 
 
 
@@ -311,6 +309,7 @@ body{
 .line{
     width: 79%;
     margin-left: 10rem;
+    background-color: #fff;
 }
 .heading{
     color: #fff;
